@@ -428,8 +428,8 @@ qea_flg='No' # [sng] Quasi-equal area mode for TempestRemap
 rgr_opt='--rgr lat_nm_out=lat#lon_nm_out=lon' # [sng] Regridding options
 #rgr_opt='--rgr lat_dnm_nm=x#lon_dmn_nm=y' # [sng] Regridding options for projection grid
 rnr_thr='' # [frc] Renormalization option
-sgs_frc='landfrac' # [sng] Sub-grid fraction variable
-sgs_msk='landmask' # [sng] Sub-grid mask variable
+sgs_frc='' # [sng] Sub-grid fraction variable
+sgs_msk='' # [sng] Sub-grid mask variable
 sgs_nrm='1.0' # [frc] Sub-grid normalization
 skl_fl='' # [sng] Skeleton file
 std_chk='Yes' # [sng] Check stdin for input file list
@@ -2721,7 +2721,12 @@ for ((fl_idx=0;fl_idx<${fl_nbr};fl_idx++)); do
 
     if [ "${prc_gsg}" = 'Yes' ]; then 
 	printf "${spt_nm}: DEBUG 20190322 Using new GSG method\n"
-	rgr_opt="${rgr_opt} --rgr sgs_frc_nm=${sgs_frc}"
+	if [ -n "${sgs_frc}" ]; then
+	    rgr_opt="${rgr_opt} --rgr sgs_frc_nm=${sgs_frc}"
+	fi # !sgs_frc
+	if [ -n "${sgs_msk}" ]; then
+	    rgr_opt="${rgr_opt} --rgr sgs_msk_nm=${sgs_msk}"
+	fi # !sgs_msk
     fi # !gsg
 
     # Block 5: Regrid
