@@ -1,3 +1,7 @@
+2019-09-09  Charlie Zender  <zender@uci.edu>
+
+	* In new SGS, pass sgs_msk_nm through ncremap
+
 2019-09-08  Charlie Zender  <zender@uci.edu>
 
 	* In new SGS, compute sgs_msk (when requested) based on sgs_frc
